--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # FastAPI Core Dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
 python-multipart==0.0.6
 jinja2==3.1.2
-starlette==0.27.0
+starlette>=0.41.0
 
 # Gemini API Dependencies
 google-genai==1.39.1
@@ -52,8 +52,8 @@ protobuf==5.29.5
 proto-plus==1.26.1
 
 # Async Support
-anyio==4.11.0
-sniffio==1.3.1
+anyio>=4.8.0
+sniffio>=1.3.0
 
 # Other Core Dependencies
 annotated-types==0.7.0
